// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hour /> should display component 1`] = `
<AppProvider>
  <Hour
    dataDay={23}
    dataHour={10}
    deleteEvent={[MockFunction]}
    fetchEvents={[MockFunction]}
    hourEvents={
      Array [
        Object {
          "createdAt": "2019-04-23T10:20:30Z",
          "date": "2019-04-23",
          "description": "",
          "endTime": "10:00",
          "id": "30",
          "name": "Kenneth Wiegand",
          "startTime": "04:00",
          "title": "to do something",
        },
      ]
    }
    weekDates={
      Array [
        2019-04-22T10:20:30.000Z,
        2019-04-23T10:20:30.000Z,
        2019-04-24T10:20:30.000Z,
        2019-04-25T10:20:30.000Z,
        2019-04-26T10:20:30.000Z,
        2019-04-27T10:20:30.000Z,
        2019-04-28T10:20:30.000Z,
      ]
    }
    weekStartDate={2019-04-22T10:20:30.000Z}
  >
    <div
      className="calendar__time-slot"
      data-time={11}
    >
      <Event
        fetchEvents={[MockFunction]}
        handleDelete={[MockFunction]}
        height={360}
        id="30"
        key="30"
        marginTop={0}
        startTime={1555981200000}
        time="04:00 - 10:00"
        title="to do something"
      >
        <div
          className="event"
          onClick={[Function]}
          style={
            Object {
              "height": 360,
              "marginTop": 0,
            }
          }
        >
          <div
            className="event__title"
          >
            to do something
          </div>
          <div
            className="event__time"
          >
            04:00 - 10:00
          </div>
        </div>
      </Event>
    </div>
  </Hour>
</AppProvider>
`;

exports[`Hour component should open modal on click 1`] = `
<AppProvider>
  <Hour
    dataDay={23}
    dataHour={10}
    deleteEvent={[MockFunction]}
    fetchEvents={[MockFunction]}
    hourEvents={Array []}
    weekDates={
      Array [
        2019-04-22T10:20:30.000Z,
        2019-04-23T10:20:30.000Z,
        2019-04-24T10:20:30.000Z,
        2019-04-25T10:20:30.000Z,
        2019-04-26T10:20:30.000Z,
        2019-04-27T10:20:30.000Z,
        2019-04-28T10:20:30.000Z,
      ]
    }
    weekStartDate={2019-04-22T10:20:30.000Z}
  >
    <div
      className="calendar__time-slot"
      data-time={11}
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </Hour>
</AppProvider>
`;

exports[`Hour component should render Hour component 1`] = `
<AppProvider>
  <Hour
    dataDay={23}
    dataHour={10}
    deleteEvent={[MockFunction]}
    fetchEvents={[MockFunction]}
    hourEvents={Array []}
    weekDates={
      Array [
        2019-04-22T10:20:30.000Z,
        2019-04-23T10:20:30.000Z,
        2019-04-24T10:20:30.000Z,
        2019-04-25T10:20:30.000Z,
        2019-04-26T10:20:30.000Z,
        2019-04-27T10:20:30.000Z,
        2019-04-28T10:20:30.000Z,
      ]
    }
    weekStartDate={2019-04-22T10:20:30.000Z}
  >
    <div
      className="calendar__time-slot"
      data-time={11}
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </Hour>
</AppProvider>
`;
